// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers/auth has a default state 1`] = `
Object {
  "isAuth": false,
  "password": null,
  "showError": true,
  "username": null,
}
`;

exports[`reducers/auth reduces IS_AUTH 1`] = `
Object {
  "isAuth": true,
  "password": null,
  "showError": true,
  "username": null,
}
`;

exports[`reducers/auth reduces RESET 1`] = `
Object {
  "isAuth": false,
  "password": null,
  "showError": true,
  "username": null,
}
`;

exports[`reducers/auth reduces SET_PASSWORD 1`] = `
Object {
  "isAuth": false,
  "password": "PASSWORD",
  "showError": true,
  "username": null,
}
`;

exports[`reducers/auth reduces SET_SHOW_ERROR 1`] = `
Object {
  "isAuth": false,
  "password": null,
  "showError": true,
  "username": null,
}
`;

exports[`reducers/auth reduces SET_USERNAME 1`] = `
Object {
  "isAuth": false,
  "password": null,
  "showError": true,
  "username": "USERNAME",
}
`;

exports[`reducers/auth reduces nothing 1`] = `
Object {
  "isAuth": false,
  "password": null,
  "showError": true,
  "username": null,
}
`;
